--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>Buscador de Anime</title>
     <link rel="stylesheet" href="./scss/main.scss" />
   </head>
 
   <body>
+
+    <header class="search-section">
+      <label class="title" for="search" >Buscador de series Anime</label>
+      <input class="search" type="text" id="search" name="anime">
+      <button class="button-search" type="submit">Buscar</button>
+    </header>
+
+    <section class="animes">
+      <div class="animes__search">
+
+      </div>
+
+      <div class="anime__filter">
+
+      </div>
+    </section>
+
     </div>
     <script src="./js/main.js"></script>
   </body>
