--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,13 @@
     </header>
 
     <section class="animes">
-      <div class="animes__search">
+
+      <div class="anime__favorites">
 
       </div>
 
-      <div class="anime__filter">
-
+      <div class="animes__search">
+        
       </div>
     </section>
 
