--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <label class="title" for="search">Buscador de series Anime</label>
       <input class="search" type="text" id="search" name="anime" />
       <button class="button-search" type="submit">Buscar</button>
+      <button class="button-search js-reset" type="submit">Reset</button>
     </header>
 
     <section class="animes">
